# jewei-mcp-mssql

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/jewei_mcp_mssql/: __init__.py  __main__.py  server.py
src/jewei_mcp_mssql/tools/: execute.py  schema.py
src/jewei_mcp_mssql/utils/: connection.py  sql_guard.py
tests/: test_sql_guard.py
