[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jewei-mcp-mssql"
version = "0.0.0"
description = "MCP Server for Microsoft SQL Server — no native drivers required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jewei", email = "jiweifong@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "mssql", "sql-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "python-tds>=1.17.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/jeweis/jewei-mcp-mssql"
Repository = "https://github.com/jeweis/jewei-mcp-mssql"

[project.scripts]
jewei-mcp-mssql = "jewei_mcp_mssql.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jewei_mcp_mssql"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
